fix: header css text align

--- a/src/app/components/pokemon-card/pokemon-card.component.scss
+++ b/src/app/components/pokemon-card/pokemon-card.component.scss
@@ -94,6 +94,7 @@
         p {
             color: #333;
             font-size: 10px;
+            padding: 0px 5px;
         }
     }
     .face {
